Complete Admin User

--- a/Squirrel/Squirrel.Web/Areas/Admin/Views/Shared/_Message.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Admin/Views/Shared/_Message.cshtml
@@ -21,6 +21,6 @@
 @if (ViewBag.JsMethod != null)
 {
     <script type="text/javascript">
-        @ViewBag.JsMethod
+        @Html.Raw(ViewBag.JsMethod)
     </script>
 }
