--- a/Squirrel/Squirrel.Web/Areas/Admin/Views/Users/List.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Admin/Views/Users/List.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Squirrel.Domain.ViewModels
+@using Squirrel.Utility.FarsiTools
 @model List<Squirrel.Domain.Enititis.User>
 
 <table class="table">
@@ -7,7 +8,11 @@
         {
             var item = user;
             <tr>
-                <td>@Html.DisplayFor(m => item.Username)</td>
+                <td>
+                    <span style="border-bottom: 1px solid;" onclick="LoadDetailsFromList('@item.Id')">
+                        @Html.DisplayFor(m => item.Username)
+                    </span>
+                </td>
                 <td>@Html.DisplayFor(m => item.Email)</td>
                 <td>
                     @if (item.IsActive)
@@ -20,6 +25,40 @@
                         <span style="display: none;">Active</span>
                     }
                 </td>
+                <td>
+                    @if (item.IsLock)
+                    {
+                        <span class="lock-user" style="color: orangered" onclick="UnlockUser(this,'@item.Id')">Lock</span>
+                        <span class="unlock-user" style="color: gainsboro; display: none;" onclick="LockUser(this,'@item.Id')">Lock</span>
+                    }
+                    else
+                    {
+                        if (item.LockDate.HasValue && item.LockDate.Value > DateTime.Now)
+                        {
+                            PersianDate pDate = item.LockDate.Value;
+                            <span style="color: orangered" onclick="UnlockUser(this,'@item.Id')">@pDate.ToStringTime()</span>
+                            <span class="lock-user" style="color: orangered; display: none;" onclick="UnlockUser(this,'@item.Id')">Lock</span>
+                            <span class="unlock-user" style="color: gainsboro; display: none;" onclick="LockUser(this,'@item.Id')">Lock</span>
+                        }
+                        else
+                        {
+                            <span class="lock-user" style="color: orangered; display: none;" onclick="UnlockUser(this,'@item.Id')">Lock</span>
+                            <span class="unlock-user" style="color: gainsboro;" onclick="LockUser(this,'@item.Id')">Lock</span>
+                        }
+                    }
+                </td>
+                <td>
+                    @if (item.IsAdmin)
+                    {
+                        <span class="isnotadmin" style="color: gainsboro;display: none;" onclick="AddAdmin(this,'@item.Id')">Admin</span>
+                        <span class="isadmin" onclick="RemoveAdmin(this,'@item.Id')">Admin</span>
+                    }
+                    else
+                    {
+                        <span class="isnotadmin" style="color: gainsboro" onclick="AddAdmin(this,'@item.Id')">Admin</span>
+                        <span class="isadmin" style="display: none;" onclick="RemoveAdmin(this,'@item.Id')">Admin</span>
+                    }
+                </td>
             </tr>
         }
     </tbody>
@@ -27,5 +66,5 @@
 
 @if (ViewBag.Paging != null)
 {
-    @Html.Partial("PagingList", (PagingModel)ViewBag.Paging)
+    @Html.Partial("Paging", (PagingModel)ViewBag.Paging)
 }
