--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Details.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Categories/Details.cshtml
@@ -33,10 +33,12 @@
 </p>
 
 <div>
-    <button class="btn btn-default" onclick="">Edit</button>
-    <button class="btn btn-default" onclick="">Remove</button>
-    <button class="btn btn-default" onclick="">Replace</button>
+    <button class="btn btn-default" onclick="LoadEditForm('@Model.Id')">Edit</button>
     <button class="btn btn-default" onclick="">Avatar</button>
+    @if (User.Identity.IsAdmin.HasValue && User.Identity.IsAdmin.Value)
+    {
+        <button class="btn btn-default" onclick="LoadRemoveForm('@Model.Id')">Remove</button>
+        <button class="btn btn-default" onclick="LoadReplaceForm('@Model.Id')">Replace</button>
+    }
 </div>
-
-
+<br />
