--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         @Html.ActionLink("Comment", "Index", "Panel", new { area = "author" }, null)
                     </li>
                     <li>
-                        @Html.ActionLink("File", "Index", "Panel", new { area = "author" }, null)
+                        @Html.ActionLink("File", "Index", "Files", new { area = "author" }, null)
                     </li>
                     <li>
                         @Html.ActionLink("Post", "Index", "Panel", new { area = "author" }, null)
