--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Upload.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Upload.cshtml
@@ -1,46 +1,55 @@
-﻿<form action="/api/FileApi" method="post" enctype="multipart/form-data">
-    <div id="uploadControls">
-        <div>
-            <span>Select file(s) to upload :</span>
-            <input id="fileUpload" type="file" multiple="multiple" />
-        </div>
-        <br />
-        <div id="uploadProgress" style="display: none;">
-            <span></span>
-            <p></p>
-        </div>
-        <div>
-            <input id="btnUpload" type="button" value="Upload" />
-            <button id="stop_upload" type="button">Stop</button>
-            <button type="button" onclick="LoadUpload()">Reset</button>
-        </div>
-        <ul id="uploadResults"></ul>
+﻿@Html.Hidden("FileAddress")
+
+<div>
+    <div id="upload_control">
+        <span>Select file(s) to upload :</span>
+        <input id="fileUpload" type="file" multiple="multiple" />
     </div>
-</form>
+    <div id="upload_errormessage" style="color: orangered; display: none;">
+        <span></span>
+    </div>
+    <div id="upload_successmessage" style="color: skyblue; display: none;">
+        <span></span>
+        <button id="upload_cancel" type="button" onclick="renewUpload()">R</button>
+    </div>
+    <div id="upload_progress" style="display: none;">
+        <p id="uplaod_filename"></p>
+        <p id="upload_percent">
+            <button id="upload_cancel" type="button" onclick="cancelUpload()">X</button>
+            <span></span>
+        </p>
+    </div>
+</div>
 
 <script type="text/javascript">
+    var ajaxupload;
+    var fileName;
+
     $(document).ready(function () {
-        //$("#btnUpload").click(OnUpload);
-        $("#btnUpload").click(function () {
-            UploadFile();
-        });
-
         var timeout;
-        var xhr;
-
         $('#fileUpload').bind('change', function () {
+            $('#FileAddress').val('');
+            fileName = this.files[0].name;
             var extension = this.files[0].name.split('.').pop();
             var size = this.files[0].size;
-            $('#uploadProgress span').text('check file ...');
-            $('#uploadProgress').show();
+            ShowUploadMessage('', '');
             timeout = setTimeout(function () {
                 CheckFileValidate(extension, size);
-            }, 5000);
+            }, 1000);
         });
 
         $('#stop_upload').click(function () {
-            $('#uploadProgress').hide();
+            $('#uploadProgress span').text('check stoped.');
+            $('#uploadProgress p').text('');
+            $('#fileUpload').val('');
             clearTimeout(timeout);
+        });
+
+        $('#reset_upload').click(function () {
+            $('#uploadProgress span').text('upload stoped.');
+            $('#uploadProgress p').text('');
+            $('#fileUpload').val('');
+            ajaxupload.abort();
         });
     });
 
@@ -53,91 +62,82 @@
             },
             success: function (r) {
                 if (r.result == false) {
-                    $('#uploadProgress span').text(r.message);
-                    $('#uploadProgress').show();
-                }
-                else if (r.result == true) {
-                    $('#uploadProgress span').text("ok");
-                    $('#uploadProgress').show();
+                    ShowUploadMessage(r.message, '');
+                } else if (r.result == true) {
+                    $('#upload_control').hide();
+                    $('#uplaod_filename').text(fileName);
+                    $('#upload_percent span').text('0');
+                    $('#upload_progress').show();
+                    UploadFile();
                 }
             }
         });
     }
 
-
-
-
-
-
-    function ShowUploadControls() {
-        $("#uploadControls").show();
-        $("#uploadProgress").hide();
-    }
-
-    function ShowUploadProgress() {
-        $("#uploadControls").hide();
-        $("#uploadProgress").show();
-    }
-
-    function OnUpload(evt) {
-        var files = $("#fileUpload").get(0).files;
-        if (files.length > 0) {
-
-            ShowUploadProgress();
-
-            if (window.FormData !== undefined) {
-                var data = new FormData();
-                for (i = 0; i < files.length; i++) {
-                    data.append("file" + i, files[i]);
-                }
-                $.ajax({
-                    type: "POST",
-                    url: "/api/FileApi",
-                    contentType: false,
-                    processData: false,
-                    data: data,
-                    success: function (results) {
-                        ShowUploadControls();
-                        $("#uploadResults").empty();
-                        for (i = 0; i < results.length; i++) {
-                            $("#uploadResults").append($("<li/>").text(results[i]));
-                        }
-                    },
-                    error: function (xhr, ajaxOptions, thrownError) {
-                        ShowUploadControls();
-                        alert(xhr.responseText);
-                    }
-                });
-            } else {
-                alert("Your browser doesn't support HTML5 multiple file uploads! Please use some decent browser.");
-            }
-        }
-    }
-
     function UploadFile() {
-        ShowUploadProgress(); //show dialog
         var file = document.getElementById('fileUpload').files[0];
         var formData = new FormData();
         formData.append("ufile", file);
-        var ajax = new XMLHttpRequest();
-        ajax.upload.addEventListener("progress", progressHandler, false);
-        ajax.addEventListener("load", completeHandler, false);
-        //ajax.open("POST", "/api/FileApi");
-        ajax.open("POST", '@Url.Action("upload","files", new {area = "author"})');
-        ajax.send(formData);
+        $('#fileUpload').val('');
+
+        ajaxupload = $.ajax({
+            xhr: function () {
+                var xhr = new window.XMLHttpRequest();
+                xhr.upload.addEventListener("progress", progressHandler, false);
+                return xhr;
+            },
+            url: '@Url.Action("upload", "files", new {area = "author"})',
+            type: "POST",
+            data: formData,
+            processData: false,
+            contentType: false,
+            error: function () {
+                renewUpload();
+            },
+            success: function (r) {
+                renewUpload();
+                setTimeout(function () {
+                    if (r.result == true) {
+                        $('#FileAddress').val(r.path);
+                        ShowUploadMessage('', r.message);
+                    }
+                    else if (r.result == false) {
+                        ShowUploadMessage(r.message, '');
+                    }
+                }, 100);
+            }
+        });
     }
 
-    function progressHandler(event) {
-        var percent = (event.loaded / event.total) * 100;
-        $('#uploadProgress > p').text(percent);
+    function progressHandler(evt) {
+        var percent = (evt.loaded / evt.total) * 100;
+        $('#upload_percent span').text(percent);
     }
 
-    function completeHandler() {
-        $('#uploadProgress > p').text(100);
-        setTimeout(function () {
-            ShowUploadControls();
-        }, 1000);
+    function ShowUploadMessage(error, success) {
+        $('#upload_errormessage').hide();
+        $('#upload_successmessage').hide();
+        if (error != '') {
+            $('#upload_errormessage span').text(error);
+            $('#upload_errormessage').show();
+        }
+        if (success != '') {
+            $('#upload_successmessage span').text(success);
+            $('#upload_successmessage').show();
+        }
+    }
+
+    function cancelUpload() {
+        ajaxupload.abort();
+        renewUpload();
+    }
+
+    function renewUpload() {
+        $('#upload_errormessage').hide();
+        $('#upload_successmessage').hide();
+        $('#upload_progress').hide();
+        $('#fileUpload').val('');
+        $('#FileAddress').val('');
+        $('#upload_control').show();
     }
 </script>
-
-
