--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Add.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Add.cshtml
@@ -1,3 +1,66 @@
-﻿<div id="upload_file_con">
+﻿@using Squirrel.Domain.Enititis
+@using Squirrel.Utility.Helpers
+@model Squirrel.Domain.ViewModels.FileAddModel
+
+@Html.Partial("_Message")
+
+<div id="upload_file_con">
     @Html.Partial("Upload")
 </div>
+<br />
+
+@using (Ajax.BeginForm("Add", "Files", null, new AjaxOptions { UpdateTargetId = "option_con_1" }, new { id = "file_ops_form" }))
+{
+    @Html.AntiForgeryToken()
+
+    <p class="form-group">
+        @Html.LabelFor(m => m.Name)
+        <br />
+        @Html.TextBoxFor(m => m.Name)
+        @Html.ValidationMessageFor(m => m.Name)
+    </p>
+
+    <p class="form-group">
+        @Html.LabelFor(m => m.Category)
+        <br />
+        @Html.TextBoxFor(m => m.Category)
+        @Html.ValidationMessageFor(m => m.Category)
+    </p>
+
+    <p class="form-group">
+        @Html.LabelFor(m => m.IsPublic)
+        <br />
+        @Html.DropDownListFor(m => m.IsPublic, SelectListExtensions.SelectListOfBool("عمومی", "اختصاصی"))
+        @Html.ValidationMessageFor(m => m.IsPublic)
+    </p>
+
+    <p>
+        <button type="submit" class="btn btn-default">افزودن</button>
+    </p>
+}
+
+<script type="text/javascript">
+    $(function () {
+        $.validator.unobtrusive.parse("#file_ops_form");
+
+        $("#parent_add").autocomplete({
+            source: function (request, response) {
+                $.ajax({
+                    url: "@Url.Action("NameJson", "Categories")",
+                    dataType: "json",
+                    data: { id: request.term },
+                    success: function (data) {
+                        response($.map(data, function (item) {
+                            return {
+                                label: item.Name,
+                                ID: item.Id
+                            };
+                        }));
+                    },
+                    //error: function () { alert('خطا'); }
+                });
+            },
+            minLength: 2,
+        });
+    })
+</script>
