--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Files/Index.cshtml
@@ -10,6 +10,7 @@
         <button type="button" class="btn btn-default" onclick="LoadAddFile()">+</button>
     </div>
     <br />
+    @Html.Partial("SearchFilter")
     <div id="list_con"></div>
 </div>
 
@@ -20,7 +21,23 @@
 
 @section scripts
 {
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/Autocomplete")
+
     <script type="text/javascript">
+        $(function () {
+            LoadList(1);
+        });
+
+        function ReloadList() {
+            $('#file_search_from').submit();
+        }
+
+        function LoadList(page) {
+            $('#searchPage').val(page);
+            $('#file_search_from').submit();
+        }
+
         function LoadAddFile() {
             $.ajax({
                 url: '@Url.Action("add")',
