--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         @Html.ActionLink("Post", "Index", "Panel", new { area = "author" }, null)
                     </li>
                     <li>
-                        @Html.ActionLink("Profile", "Index", "Panel", new { area = "author" }, null)
+                        @Html.ActionLink("Profile", "Index", "Profile", new { area = "author" }, null)
                     </li>
                     <li>
                         @Html.ActionLink("Tag", "Index", "Panel", new { area = "author" }, null)
