--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Index.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Index.cshtml
@@ -18,42 +18,61 @@
 
 @section scripts
 {
-    @*@Scripts.Render("~/bundles/jqueryui")
-        @Styles.Render("~/Content/Autocomplete")*@
-
     <script type="text/javascript">
-        $(function () {
+        $(function() {
             LoadDetails();
         });
 
         function LoadDetails() {
             $.ajax({
                 url: '@Url.Action("Details", "Profile")',
-                success: function (r) {
+                success: function(r) {
                     $('#profile_details').html(r);
                 },
             });
         }
 
-        function LoadEdit(e) {
-            $('#firstname_con .control:eq(0)').hide();
-            $('#firstname_con .control:eq(1)').show();
-            $('#lastname_con .control:eq(0)').hide();
-            $('#lastname_con .control:eq(1)').show();
-            $(e).hide();
-            $(e).next().show();
+        function LoadEdit() {
+            $('#editable_info_diplay').hide();
+            $('#editable_info_form').show();
         }
 
-        function SubmitEdit(e) {
+        function CancelEdit() {
+            $('#editable_info_diplay').show();
+            $('#editable_info_form').hide();
+            $('#editable_info_form #internal_message').text('');
+
+            var $firstName = $('#editable_info_form input[type="text"]#Firstname');
+            $firstName.val($firstName.attr('def-val'));
+
+            var $lastName = $('#editable_info_form input[type="text"]#Lastname');
+            $lastName.val($lastName.attr('def-val'));
+        }
+
+        function onEditSuccess(data) {
+            if (data.result == true) {
+                LoadDetails();
+            } else {
+                $('#editable_info_form #internal_message').text(data.message);
+            }
+        }
+
+        function loadChangeAvatar() {
             $.ajax({
-                url: '@Url.Action("Edit","Profile")',
-                type: 'POST',
-                data: {
-                    Firstname: $('#firstname_con input[type="text"]').val(),
-                    Lastname: $('#lastname_con input[type="text"]').val(),
+                url: '@Url.Action("Avatar", "Profile")',
+                success: function (r) {
+                    $('#option_con_1').html(r);
                 },
-                success: function (r) { },
             });
+        }
+
+        function onChangeAvatarSuccess(data) {
+            if (data.result == true) {
+                LoadDetails();
+                $('#option_con_1').text(data.message);
+            } else {
+                $('#profile_avatar_error').text(data.message);
+            }
         }
     </script>
 }
