--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Shared/_Layout.cshtml
@@ -47,6 +47,9 @@
                         @Html.ActionLink("Profile", "Index", "Profile", new { area = "author" }, null)
                     </li>
                     <li>
+                        @Html.ActionLink("Publish", "Index", "Publish", new { area = "author" }, null)
+                    </li>
+                    <li>
                         @Html.ActionLink("Tag", "Index", "Panel", new { area = "author" }, null)
                     </li>
                     <li>
