--- a/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Details.cshtml
+++ b/Squirrel/Squirrel.Web/Areas/Author/Views/Profile/Details.cshtml
@@ -1,73 +1,132 @@
 ﻿@using Squirrel.Utility.FarsiTools
-@model Squirrel.Domain.Enititis.Profile
+@model Squirrel.Domain.ViewModels.ProfileModelOverrided
 
 <div class="form-con">
-    <div class="form-row">
-        <p class="title">@Html.DisplayNameFor(model => model.CreateDate)</p>
-        <p class="control">@(((PersianDate)Model.CreateDate).ToStringDateTime())</p>
-    </div>
-
-    @if (Model.EditDate.HasValue)
+    @if (!Model.IsNullProfile)
     {
         <div class="form-row">
-            <p class="title">@Html.DisplayNameFor(model => model.EditDate)</p>
-            <p class="control">@(((PersianDate)Model.EditDate).ToStringDateTime())</p>
+            <p class="title">@Html.DisplayNameFor(model => model.CreateDate)</p>
+            <p class="control">@(((PersianDate)Model.CreateDate).ToStringDateTime())</p>
+        </div>
+
+        if (Model.EditDate.HasValue)
+        {
+            <div class="form-row">
+                <p class="title">@Html.DisplayNameFor(model => model.EditDate)</p>
+                <p class="control">@(((PersianDate)Model.EditDate).ToStringDateTime())</p>
+            </div>
+        }
+
+        if (Model.Avatar == null)
+        {
+            <div class="form-row">
+                <p class="title">@Html.DisplayNameFor(model => model.Avatar)</p>
+                <p class="control">
+                    <button type="button" class="btn" onclick="loadChangeAvatar()">Add</button>
+                </p>
+            </div>
+        }
+        else
+        {
+            <div class="form-row">
+                <p class="title">@Html.DisplayNameFor(model => model.Avatar)</p>
+                <p class="control">
+                    <img src='@Url.Content(Model.Avatar.Address)' style="height: 35px;" />
+                    <button type="button" class="btn" onclick="loadChangeAvatar()">Change</button>
+                </p>
+            </div>
+        }
+
+        <div id="editable_info_diplay">
+            <div class="form-row" id="firstname_con">
+                <p class="title">@Html.DisplayNameFor(model => model.Firstname)</p>
+                <p class="control">@Html.DisplayFor(model => model.Firstname)</p>
+            </div>
+
+            <div class="form-row" id="lastname_con">
+                <p class="title">@Html.DisplayNameFor(model => model.Lastname)</p>
+                <p class="control">@Html.DisplayFor(model => model.Lastname)</p>
+            </div>
+
+            <div class="form-row">
+                <p class="title"></p>
+                <p class="control">
+                    <button type="button" class="btn btn-default" onclick=" LoadEdit(this) ">ویرایش</button>
+                </p>
+            </div>
+        </div>
+
+        <div style="display: none;" id="editable_info_form">
+            @using (Ajax.BeginForm("Edit", "Profile", null, new AjaxOptions { OnSuccess = "onEditSuccess" }, new { id = "profile_details_form1" }))
+            {
+                @Html.AntiForgeryToken()
+
+                <div class="form-row" id="firstname_con">
+                    <p class="title">@Html.DisplayNameFor(model => model.Firstname)</p>
+                    <p class="control">
+                        @Html.TextBoxFor(model => model.Firstname, new Dictionary<string, object> { { "def-val", Model.Firstname } })
+                        @Html.ValidationMessageFor(model => model.Firstname)
+                    </p>
+                </div>
+
+                <div class="form-row" id="lastname_con">
+                    <p class="title">@Html.DisplayNameFor(model => model.Lastname)</p>
+                    <p class="control">
+                        @Html.TextBoxFor(model => model.Lastname, new Dictionary<string, object> { { "def-val", Model.Lastname } })
+                        @Html.ValidationMessageFor(model => model.Lastname)
+                    </p>
+                </div>
+
+                <div class="form-row">
+                    <p class="title"></p>
+                    <p class="control">
+                        <button type="submit" class="btn btn-default" onclick="">ثبت</button>
+                        <button type="button" class="btn btn-default" onclick=" CancelEdit() ">انصراف</button>
+                    </p>
+                </div>
+            }
+            <div id="internal_message"></div>
         </div>
     }
-
-    <div class="form-row">
-        <p class="title">@Html.DisplayNameFor(model => model.AvatarId)</p>
-        <p class="control">
-            @Html.DisplayFor(model => model.AvatarId)
-            <button type="button" class="btn">Change</button>
-        </p>
-    </div>
-
-    @using (Ajax.BeginForm("Edit", "Profile", null, new AjaxOptions { }, new { id = "profile_details_form" }))
+    else
     {
-        <div class="form-row" id="firstname_con">
-            <p class="title">@Html.DisplayNameFor(model => model.Firstname)</p>
-            <p class="control">@Html.DisplayFor(model => model.Firstname)</p>
-        </div>
-        <div class="form-row" id="firstname_con">
-            <p class="title">@Html.DisplayNameFor(model => model.Firstname)</p>
-            <p class="control">
-                @Html.EditorFor(model => model.Firstname)
-                @Html.ValidationMessageFor(model => model.Firstname)
-            </p>
-        </div>
+        <div id="editable_info_form">
+            @using (Ajax.BeginForm("Edit", "Profile", null, new AjaxOptions { OnSuccess = "onEditSuccess" }, new { id = "profile_details_form2" }))
+            {
+                @Html.AntiForgeryToken()
 
-        <div class="form-row" id="lastname_con">
-            <p class="title">@Html.DisplayNameFor(model => model.Lastname)</p>
-            <p class="control">@Html.DisplayFor(model => model.Lastname)</p>
-        </div>
-        <div class="form-row" id="lastname_con">
-            <p class="title">@Html.DisplayNameFor(model => model.Lastname)</p>
-            <p class="control">
-                @Html.EditorFor(model => model.Lastname)
-                @Html.ValidationMessageFor(model => model.Lastname)
-            </p>
-        </div>
+                <div class="form-row" id="firstname_con">
+                    <p class="title">@Html.DisplayNameFor(model => model.Firstname)</p>
+                    <p class="control">
+                        @Html.TextBoxFor(model => model.Firstname)
+                        @Html.ValidationMessageFor(model => model.Firstname)
+                    </p>
+                </div>
 
-        <div class="form-row">
-            <p class="title"></p>
-            <p class="control">
-                <button type="button" class="btn btn-default" onclick="LoadEdit(this)">ویرایش</button>
-            </p>
-        </div>
-        <div class="form-row">
-            <p class="title"></p>
-            <p class="control">
-                <button type="submit" class="btn btn-default" onclick="SubmitEdit(this)">ثبت</button>
-                <button type="button" class="btn btn-default" onclick="">انصراف</button>
-            </p>
+                <div class="form-row" id="lastname_con">
+                    <p class="title">@Html.DisplayNameFor(model => model.Lastname)</p>
+                    <p class="control">
+                        @Html.TextBoxFor(model => model.Lastname)
+                        @Html.ValidationMessageFor(model => model.Lastname)
+                    </p>
+                </div>
+
+                <div class="form-row">
+                    <p class="title"></p>
+                    <p class="control">
+                        <button type="submit" class="btn btn-default" onclick="">ثبت</button>
+                    </p>
+                </div>
+            }
+            <div id="internal_message"></div>
         </div>
     }
 </div>
 
 <script type="text/javascript">
     $(function () {
-        $.validator.unobtrusive.parse("#profile_details_form");
+        $.validator.unobtrusive.parse("#profile_details_form1");
+        $.validator.unobtrusive.parse("#profile_details_form2");
     });
 </script>
 
